# reasonable-answer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  actionlint.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-task.yml  bug.yml  config.yml  feature.yml
.github/actions/review-agent-run/: action.yml  run-in-container.sh
.github/actions/review-classify/: action.yml
.github/actions/review-dedup/: action.yml
.github/actions/review-publish/: action.yml
.github/actions/review-state/: action.yml
.github/ci/: Dockerfile  versions.env
.github/ci/prompts/: resolve-issue.md
.github/scripts/review/: aggregate.mjs  aggregate.test.mjs  expected-roles.mjs  expected-roles.test.mjs  judge.mjs  judge.test.mjs  normalize-artifact.mjs  normalize-artifact.test.mjs  render-finalize-comment.sh
.github/scripts/review/prompts/: docs.md  fixer-resume.md  fixer.md  invariant.md  security.md  test.md
.github/scripts/review/schema/: fix-result-v1.json  reviewer-v1.json
.github/scripts/review/validator/: package-lock.json  package.json
.github/workflows/: ci-image.yml  docker-release.yml  pr-validation.yml  resolve-issue.yml  review-entry.yml  review-finalize.yml  review-fixer.yml  review-judge.yml  review-pipeline.yml  review-reviewer.yml
config/: roster.yaml
docs/: DESIGN.md  architecture.md  bias.md  ci-pipeline.md  ci-setup.md  concepts.md  convergence.md  decisions.md  isolation.md  question-refinement.md  ssrf-egress-isolation.md
scripts/: ci-session-store.sh  ensure-ci-image.sh  smoke-test-image.sh  validate-workflow-refs.sh
src/reasonable_answer/: __init__.py  audition.py  cli.py  config.py  controller.py  critique.py  dispute.py  fetch.py  graph.py  ingest.py  llm.py  prompts.py  report.py  roles.py  schemas.py  search.py  shutdown.py  store.py  taxonomy.py  triage.py
src/reasonable_answer/web/: __init__.py  app.py  markdown.py  registry.py  render.py  retention.py  worker.py
tests/: conftest.py  fakes.py  test_audition.py  test_ci_session_store.py  test_cli.py  test_config.py  test_controller.py  test_dispute.py  test_fetch.py  test_finalize_label.py  test_graph.py  test_hardening.py  test_ingest.py  test_isolation.py  test_llm_tools.py  test_prompt_dates.py  test_report_store_llm.py  test_roles.py  test_search.py  test_shutdown.py  test_taxonomy.py  test_triage.py  test_web.py
tests/fixtures/audition/contradicted-claim-01/: artifact.md  manifest.yaml
tests/fixtures/audition/control-sound-01/: artifact.md  manifest.yaml
tests/fixtures/audition/control-sound-02/: artifact.md  manifest.yaml
tests/fixtures/audition/fabricated-citation-01/: artifact.md  manifest.yaml
tests/fixtures/audition/invalid-inference-01/: artifact.md  manifest.yaml
tests/fixtures/audition/loaded-language-01/: artifact.md  manifest.yaml
tests/fixtures/audition/omitted-counterargument-01/: artifact.md  manifest.yaml
tests/fixtures/audition/one-sided-sourcing-01/: artifact.md  manifest.yaml
tests/fixtures/audition/uncited-claim-01/: artifact.md  manifest.yaml
tests/fixtures/audition/unexamined-presupposition-01/: artifact.md  manifest.yaml
