[project]
name = "reasonable-answer"
version = "0.1.0"
description = "Isolation-pipeline report refiner: alternating write/critique game with a blind referee"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "openai>=1.60.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    # Renders the report markdown for the browser. Declared even though `rich` already
    # pulls it in: the web layer uses it directly and must not depend on that accident.
    "markdown-it-py>=3.0",
]
# PDF seed reports. Optional because it is the only format that needs a dependency at
# all — HTML, .docx and .txt convert on the standard library — so the core install
# stays lean and a missing pypdf is reported as an actionable message, not an
# ImportError. Pure Python and BSD-3: no system libraries, no compiled wheels.
ingest = ["pypdf>=5.1.0"]
all = ["reasonable-answer[web,ingest]"]

[project.scripts]
ra = "reasonable_answer.cli:app"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    # So CI exercises the PDF path; the tests that need it skip without it.
    "pypdf>=5.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reasonable_answer"]

# The default roster travels inside the wheel; without it an installed package has
# no working config and every command fails on a path that only exists in a checkout.
[tool.hatch.build.targets.wheel.force-include]
"config/roster.yaml" = "reasonable_answer/_default_roster.yaml"

# 110 is where this codebase already sits: at 100 there are 26 offenders, at 110 there
# are 9, and the long lines are mostly prose comments explaining an invariant — wrapping
# those costs more readability than it buys.
[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# UP042 wants `StrEnum` instead of `(str, Enum)`. That is not a refactor here: the two
# differ in what `str()` and `format()` produce ("logic" vs "Lens.LOGIC"), and these enum
# values are interpolated into prompts and serialized into the audit trail. Changing them
# would silently change model-facing text and stored run records.
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
# `typer.Option(...)` in a parameter default is not the B008 mistake — it is how typer
# declares CLI options, and the "fix" would break every command signature.
"src/reasonable_answer/cli.py" = ["B008"]
# render.py holds the inline CSS and HTML templates. Wrapping a CSS rule or an f-string
# tag at 110 columns makes it harder to read, not easier.
"src/reasonable_answer/web/render.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["live: hits the real LiteLLM proxy (deselect with '-m \"not live\"')"]
